@@ -88,6 +88,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #1745257 Invalid DB name is still displayed
 - bug #1730367 Calendar "Go" has no effect
 - patch #1750500 Smaller file for favicon.ico, thanks to Thijs Kinkhorst
+- bug #1748633 Incorrect parameter validation for VIEWs
 
 2.10.2.0 (2007-06-15)
 
